[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualimiss"
version = "0.0.1"
authors = [
  { name="ngntrgduc"},
]
description = "A missingno clone, use to visualize missing data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
keywords=['data', 'data visualization', 'missing data']

[project.urls]
"Homepage" = "https://github.com/ngntrgduc/visualimiss"
"Bug Tracker" = "https://github.com/ngntrgduc/visualimiss/issues"