[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualimiss"
version = "0.0.7"
authors = [{ name="ngntrgduc"}]
description = "Visualize missing data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
keywords = ["data", "data visualization", "missing data"]
dependencies = ["numpy", "pandas", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/ngntrgduc/visualimiss"
"Bug Tracker" = "https://github.com/ngntrgduc/visualimiss/issues"